--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Facebook – log in or sign up</title>
+    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>Facebook – log in or sign up</title>
 </head>
+
 <body class="bg-gray-100">
-    <div class="container mt-48 flex mx-auto items-center justify-center">
-        <div class="left w-1/3 mx-14">
-            <img class="w-80" src="fb.svg" alt="">
-            <p class="text-3xl mx-8">Facebook helps you connect and share with the people in your life.</p>
+    <div class="container mt-8 md:mt-24 flex flex-col md:flex-row items-center justify-center">
+        <div class="left w-full md:w-1/3 mx-4 md:mx-14">
+            <img class="w-80 mx-auto" src="fb.svg" alt="">
+            <p class="text-lg md:text-3xl text-center md:text-left mx-4 md:mx-8">Facebook helps you connect and share with the people in your life.</p>
         </div>
-        <div class="right flex flex-col bg-white p-8 rounded-xl w-1/4 text-lg relative">
+        <div class="right flex flex-col bg-white p-4 md:p-8 rounded-xl w-full md:w-1/4 text-base md:text-lg relative">
             <input class="px-4 h-12 my-2 border border-1 outline-blue-600 border-gray-200 rounded-lg" type="text" placeholder="Email address or phone number">
             <input class="px-4 h-12 my-2 border border-1 outline-blue-600 border-gray-200 rounded-lg" type="password" placeholder="Password">
             <button class="bg-blue-600 hover:bg-blue-700 text-white my-2 py-3 rounded-md font-bold">Log In</button>
@@ -27,4 +29,5 @@
         </div>
     </div>
 </body>
+
 </html>
